discovered a way for the extension to save files with the Chrome downloads API and data URIs

--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
             <h3 style="text-align: center;">Current Header Text:</h3>
             <hr />
             <p id="headerTextField" style="text-align: center;">REPLACE ME!!!</p>
+            <button id="testDLButton" type="button" onclick="onDownloadTestClicked()">TEST DOWNLOAD</button>
         </div>
         <script src="popup.js"></script>
     </body>
