cleaned up some really old legacy stuff and disabled console debug

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,11 +4,9 @@
     </head>
     <body>
         <div style="width: 20em;">
-            <h3 style="text-align: center;">Current Header Text:</h3>
+            <h3 style="text-align: center;">PIE++</h3>
             <hr />
-            <p id="headerTextField" style="text-align: center;">REPLACE ME!!!</p>
-            <button id="testDLButton" type="button" onclick="onDownloadTestClicked()">TEST DOWNLOAD</button>
+            <p style="text-align: center;"><a href="https://github.com/zacharygraber/pie-plus-plus">Visit us on Github!</a></p>
         </div>
-        <script src="popup.js"></script>
     </body>
 </html>
