beginning work on custom home page feature

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -7,6 +7,8 @@
             <h3 style="text-align: center;">PIE++</h3>
             <hr />
             <p style="text-align: center;"><a href="https://github.com/zacharygraber/pie-plus-plus">Visit us on Github!</a></p>
+            <p style="text-align: center;">Current Home Page: <span id="currentHomePage">TBD</span></p>
         </div>
+        <script src="popup.js"></script>
     </body>
 </html>
