added icons for saving and editing home page value

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="stylesheets/popup.css">
+        <link rel="stylesheet" href="css/popup.css">
     </head>
     <body>
         <div style="width: 20em;">
@@ -14,10 +14,13 @@
                     <td><input id="homePageField" type="text" disabled="disabled" value="Loading..."></td>
 
                     <!-- Repplace the "edit" text with a more proper edit icon (like a pencil or sth) -->
-                    <td><button id="homePageFieldEdit">edit</button></td>
+                    <td><img src="images/icons8-edit.svg" id="homePageFieldEdit"/></td>
                 </tr>
             </table>
         </div>
+
+        <!-- Icons8 attribution. Please don't delete--required by their license terms -->
+        <p style="font-size: 0.65em; text-align: center;"><a target="_blank" href="https://icons8.com/icon/71201/edit">Edit</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
         <script src="popup.js"></script>
     </body>
 </html>
